--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dsa",
+  "name": "ds-a",
   "version": "1.0.0",
   "description": "A series of prompts and challenges to study data structures and algorithms.",
   "main": "index.js",
